--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.8.6",
+    "babel-jest": "^25.1.0",
     "jest": "^25.1.0"
   }
 }
