--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.8.6",
     "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
+    "jest-each": "^25.1.0",
     "prettier": "^1.19.1"
   }
 }
