--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.8.6",
     "babel-jest": "^25.1.0",
+    "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "jest-each": "^25.1.0",
     "prettier": "^1.19.1"
